--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=candidat-service
 server.port= 8081
 spring.cloud.config.enabled=false
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -11,7 +10,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop 
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.settings.web-allow-others=true
 #eurka
 eureka.client.server-url.default-zone=http://localhost:8761/
 eureka.client.register-with-eureka=true
