--- a/offre-service/src/main/resources/application.properties
+++ b/offre-service/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.hibernate.ddl-auto= update
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-#App name
+#App name 
 #eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-#eureka.client.register-with-eureka=true
+eureka.client.register-with-eureka=false
 management.endpoint.health.show-details=always 
 
 
