--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.fetch-registry=true
 #Do not register on another server
 eureka.client.register-with-eureka=false
 #The service URL for any client that doesn?t express a preference
-eureka.client.service-url.default-zone = http://localhost:${server.port}/eureka
+eureka.client.service-url.default-zone = http://localhost:8761/eureka
 #The domain we manage
 eureka.instance.hostname=localhost
 #Refresh rate < 1s
