--- a/Participant_Service/Dockerfile
+++ b/Participant_Service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:11
 EXPOSE 8081
-ADD target/candidat-0.0.1-SNAPSHOT.jar candidat.jar
-ENTRYPOINT ["java" , "-jar" , "candidat.jar"]
+ADD target/participant-0.0.1-SNAPSHOT.jar participant.jar
+ENTRYPOINT ["java" , "-jar" , "participant.jar"]
