--- a/Authentication-service/Dockerfile
+++ b/Authentication-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
-EXPOSE 8081 
-ADD target/authentification-service-0.0.1-SNAPSHOT.jar authentification.jar
-ENTRYPOINT ["java" , "-jar" , "employee.jar"]
+FROM  openjdk:11
+EXPOSE 8081
+ADD /target/authentication-microservice-0.0.1-SNAPSHOT.jar authentication-microservice.jar
+ENTRYPOINT ["java", "-jar", "authentication-microservice.jar"]
