--- a/Authentication-service/src/main/resources/application.properties
+++ b/Authentication-service/src/main/resources/application.properties
@@ -1,17 +1,23 @@
-spring.application.name=authentification-service 
-server.port= 8082
-spring.cloud.config.enabled=false
+
+# H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
-#http://localhost:8081/h2
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.settings.web-allow-others=true
-#eurka
-eureka.client.server-url.default-zone=http://localhost:8761/
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.username=sa
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= create
+
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+server.port = 8081
+spring.application.name=auth-service
+
+# eureka config
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
