--- a/evalulation-service/src/main/resources/application.properties
+++ b/evalulation-service/src/main/resources/application.properties
@@ -6,18 +6,13 @@ spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
-
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop 
 
 #App name
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
-
-
