--- a/Participation_Service/pom.xml
+++ b/Participation_Service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservice</groupId>
-	<artifactId>participant</artifactId>
+	<artifactId>participation-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>participant</name>
+	<name>participation-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
