--- a/Participation_Service/src/main/resources/application.properties
+++ b/Participation_Service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=candidat-service
-server.port= 8081
+spring.application.name=participation-service
+server.port= 8084
 spring.cloud.config.enabled=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
+ 
 #http://localhost:8081/h2
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
@@ -13,5 +13,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.settings.web-allow-others=true
 #eurka
-eureka.client.server-url.default-zone=http://localhost:8761/
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
