--- a/candidat-service/pom.xml
+++ b/candidat-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservice</groupId>
-	<artifactId>candidat</artifactId>
+	<artifactId>candidat-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>candidat</name>
+	<name>candidat-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
