add Security Config to api offre and add participant to gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -17,7 +17,10 @@ spring:
           uri: lb://candidate-service
           predicates:
             - Path=/GestionCandidat/**
-            - Path=/candidatures/**
+        - id: participant
+          uri: lb://participation-service
+          predicates:
+            - Path=/participant/**
         - id : auth-service
           uri: lb://auth-service
           predicates:
