--- a/offre-service/src/main/resources/application.properties
+++ b/offre-service/src/main/resources/application.properties
@@ -16,5 +16,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #App name 
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
+spring.security.user.name=sergey
+spring.security.user.password=sergey
+
 
 
